# closure-templates

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  _config.yml  build.xml  concepts.md  for-java_jar_README.txt  for-javascript_jar_README.txt  index.html  maven_closure_templates_install.json  maven_install.json  msg-extractor_jar_README.txt  package.json  params.json  pom.xml
java/src/com/google/template/soy/: AbstractSoyCompiler.java  BUILD.bazel  CacheLoaders.java  CommandLineError.java  CompilationResult.java  ErrorReporterImpl.java  ErrorReporterModule.java  FileSystemSoyFileReader.java  GssHeaderGenerator.java  GuiceInitializer.java  MainClassUtils.java  PerInputOutputFiles.java  PluginLoader.java  Readers.java  SassHeaderGenerator.java  SoyAnnotatedLoggingConfigGenerator.java  SoyCmdLineParser.java  SoyCompiler.java  SoyCompilerFileReader.java  SoyConformanceChecker.java  SoyFileSet.java  SoyFileSetParser.java  SoyHeaderCompiler.java  SoyInputCache.java  SoyModule.java  SoyMsgExtractor.java  SoyMsgPruner.java  SoyParseInfoGenerator.java  SoyPluginValidator.java  SoyToGssCompiler.java  SoyToIdomSrcCompiler.java  SoyToIncrementalDomInteropSrcCompiler.java  SoyToIncrementalDomSrcCompiler.java  SoyToJavaSrcCompilerExperimental.java  SoyToJbcSrcCompiler.java  SoyToJsSrcCompiler.java  SoyToPySrcCompiler.java  SoyToSassCompiler.java  SoyUtils.java  SoyVeMetadataGenerator.java  (+2 more)
java/src/com/google/template/soy/base/: AbstractSoyFileSupplier.java  BUILD  BUILD.bazel  BaseUtils.java  ErrorManager.java  ErrorManagerImpl.java  FixedIdGenerator.java  IdGenerator.java  IncrementingIdGenerator.java  IndentedLinesBuilder.java  IntegerIdGenerator.java  SourceFilePath.java  SourceLocation.java  SourceLocationMapper.java  SourceLogicalPath.java  SoyBackendKind.java  SoyFileKind.java  SoyFileSupplier.java  SoySyntaxException.java  StableSoyFileSupplier.java  VolatileSoyFileSupplier.java  package.html
java/src/com/google/template/soy/basetree/: AbstractNode.java  AbstractNodeVisitor.java  AbstractParentNode.java  AbstractReturningNodeVisitor.java  BUILD  BUILD.bazel  CopyState.java  Copyable.java  MixinParentNode.java  Node.java  NodeFormatter.java  NodeVisitor.java  ParentNode.java  SourceBuilder.java  SyntaxVersion.java  SyntaxVersionBound.java  SyntaxVersionUpperBound.java  package.html
java/src/com/google/template/soy/basicdirectives/: BUILD.bazel  BasicDirectives.java  BasicDirectivesModule.java  BasicDirectivesRuntime.java  BasicEscapeDirective.java  BlessStringAsTrustedResourceUrlForLegacyDirective.java  ChangeNewlineToBrDirective.java  CleanHtmlDirective.java  EscapeJsDirective.java  EscapeUriDirective.java  FilterImageDataUriDirective.java  FilterLegacyUriBehaviorDirective.java  FilterSipUriDirective.java  FilterTelUriDirective.java  FilterTrustedResourceUriDirective.java  InsertWordBreaksDirective.java  TextDirective.java  TruncateDirective.java  package.html
java/src/com/google/template/soy/basicfunctions/: AbsFunction.java  AsSoySignalOrNullFunction.java  AugmentMapFunction.java  BUILD.bazel  BasicFunctions.java  BasicFunctionsModule.java  BasicFunctionsRuntime.java  BooleanFunction.java  BuildAttrFunction.java  BuildAttrValueFunction.java  BuildClassValueFunction.java  BuildStyleValueFunction.java  CeilingFunction.java  ConcatAttributeValuesFunction.java  ConcatCssValuesFunction.java  ConcatListsFunction.java  ConcatMapsMethod.java  CosFunction.java  DebugSoyTemplateInfoFunction.java  EcmaParseFloatFunction.java  EcmaParseIntFunction.java  FloatFunction.java  FloorFunction.java  GbigintListSortMethod.java  HtmlToText.java  HtmlToTextFunction.java  IsFiniteFunction.java  IsIntegerFunction.java  IsNaNFunction.java  IsNonnullFunction.java  IsNullFunction.java  JavascriptAndFunction.java  JavascriptOrFunction.java  JoinFunction.java  JsonStringifyFunction.java  KeysFunction.java  LegacyObjectMapToMapFunction.java  LengthFunction.java  ListContainsFunction.java  ListContainsSoyFunction.java  (+63 more)
java/src/com/google/template/soy/basicmethods/: BasicMethods.java  GetExtensionMethod.java
java/src/com/google/template/soy/bididirectives/: BUILD.bazel  BidiDirectives.java  BidiDirectivesModule.java  BidiDirectivesRuntime.java  BidiSpanWrapDirective.java  BidiUnicodeWrapDirective.java  EnumTracker.java  package.html
java/src/com/google/template/soy/bidifunctions/: BUILD.bazel  BidiDirAttrFunction.java  BidiEndEdgeFunction.java  BidiFunctions.java  BidiFunctionsModule.java  BidiFunctionsRuntime.java  BidiGlobalDirFunction.java  BidiMarkAfterFunction.java  BidiMarkFunction.java  BidiStartEdgeFunction.java  BidiTextDirFunction.java  package.html
java/src/com/google/template/soy/conformance/: BUILD.bazel  BanFragmentNavigation.java  BanInlineEventHandlers.java  BanXidForCssObfuscation.java  BannedCssSelector.java  BannedDirective.java  BannedFunction.java  BannedHtmlTag.java  BannedRawText.java  BannedTextEverywhereExceptComments.java  CheckConformance.java  ConformanceInput.java  NoSoyDocParams.java  RequireStrictAutoescaping.java  RequireStrictHtml.java  RequireStronglyTypedIjParams.java  Result.java  Rule.java  RuleWithExemptions.java  RuleWithWhitelists.java  SoyConformance.java  (+2 more)
java/tests/com/google/template/soy/: BUILD.bazel  ErrorPrettyPrinterTest.java  FormattingErrorReporter.java  IntegrationTestRuntime.java  IntegrationTestSourceFunctions.java  MainClassUtilsTest.java  PerInputOutputFilesTest.java  SoyFileSetParserBuilder.java  SoyHeaderCompilerTest.java  SoyMsgExtractorTest.java  TransitiveIjParamsTest.java
src/main/protobuf/: BUILD  BUILD.bazel  annotated_logging_config.proto  conformance.proto  css_metadata.proto  diagnostic_category.proto  idom_metadata.proto  logging_config.proto  runtime_ve_metadata.proto  soy_compiler_metrics.proto  template_call_metadata.proto  template_metadata.proto  ve_metadata.proto
src/test/protobuf/: BUILD.bazel  collision.proto  example.proto  proto2_broken_semantics.proto  proto2_correct_semantics.proto  proto2_non_broken.proto  proto3.proto  test.proto  ve_metadata_example.proto
(+3270 files in other folders)
