# Copyright 2026 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "com_google_closure_templates")

# Rules JVM External
bazel_dep(name = "rules_jvm_external", version = "6.10")

# Java Rules
bazel_dep(name = "rules_java", version = "9.6.1")

# Proto Rules
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "abseil-cpp", version = "20260107.1")

# Rules Python
bazel_dep(name = "rules_python", version = "1.6.3")

# Rules CC
bazel_dep(name = "rules_cc", version = "0.2.17")

# Platforms
bazel_dep(name = "platforms", version = "1.0.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "args4j:args4j:2.33",
        "com.google.auto.value:auto-value:1.11.0",
        "com.google.auto.value:auto-value-annotations:1.11.0",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.10.1",
        "com.google.common.html.types:types:1.0.8",
        "com.google.errorprone:error_prone_annotations:2.20.0",
        "com.google.escapevelocity:escapevelocity:1.1",
        "com.google.flogger:flogger:0.7.4",
        "com.google.flogger:flogger-system-backend:0.7.4",
        "com.google.flogger:google-extensions:0.7.4",
        "com.google.guava:guava:33.0.0-jre",
        "com.google.inject:guice:7.0.0",
        "com.google.protobuf:protobuf-java:4.34.1",
        "com.ibm.icu:icu4j:73.2",
        "javax.annotation:javax.annotation-api:1.3.2",
        "javax.inject:javax.inject:1",
        "net.java.dev.javacc:javacc:6.1.2",
        "org.apache.ant:ant:1.10.13",
        "org.json:json:20230618",
        "org.ow2.asm:asm:9.5",
        "org.ow2.asm:asm-commons:9.5",
        "org.ow2.asm:asm-tree:9.5",
        "org.ow2.asm:asm-util:9.5",
    ],
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)
maven.artifact(
    testonly = True,
    artifact = "guava-testlib",
    group = "com.google.guava",
    version = "33.0.0-jre",
)
maven.artifact(
    testonly = True,
    artifact = "truth",
    group = "com.google.truth",
    version = "1.4.0",
)
maven.artifact(
    testonly = True,
    artifact = "truth-java8-extension",
    group = "com.google.truth.extensions",
    version = "1.4.0",
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
use_repo(maven, "maven", "unpinned_maven")

bazel_dep(name = "toolchains_llvm", version = "1.7.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
