##
 # Copyright 2013 Google Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
 # NOTE: THIS IS A WORK IN PROGRESS AND IS NOT EXPECTED TO WORK AS WE HAVE
 # NO CONTINUOUS INTEGRATION.
##

load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "conformance_proto",
    srcs = [
        "conformance.proto",
    ],
)

java_proto_library(
    name = "conformance_java_proto",
    visibility = [
        "//java/src/com/google/template/soy:__subpackages__",
    ],
    deps = [
        ":conformance_proto",
    ],
)

proto_library(
    name = "css_metadata_proto",
    srcs = [
        "css_metadata.proto",
    ],
)

java_proto_library(
    name = "css_metadata_java_proto",
    visibility = [
        "//java/src/com/google/template/soy:__subpackages__",
    ],
    deps = [
        ":css_metadata_proto",
    ],
)

proto_library(
    name = "logging_config_proto",
    srcs = [
        "logging_config.proto",
    ],
)

java_proto_library(
    name = "logging_config_java_proto",
    visibility = [
        "//java/src/com/google/template/soy:__subpackages__",
    ],
    deps = [
        ":logging_config_proto",
    ],
)

proto_library(
    name = "template_metadata_proto",
    srcs = [
        "template_metadata.proto",
    ],
)

java_proto_library(
    name = "template_metadata_java_proto",
    visibility = [
        "//java/src/com/google/template/soy:__subpackages__",
    ],
    deps = [
        ":template_metadata_proto",
    ],
)
