load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

package(
    default_testonly = 1,
    default_visibility = ["//:soy_internal"],
)

java_proto_library(
    name = "test_protos_java_proto",
    deps = [":test_protos"],
)

java_proto_library(
    name = "test_collision_protos_java_proto",
    deps = [":test_collision_protos"],
)

proto_library(
    name = "test_protos",
    srcs = glob(
        ["*.proto"],
        exclude = ["collision.proto"],
    ),
)

proto_library(
    name = "test_collision_protos",
    srcs = ["collision.proto"],
)
