##
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

package(
    default_testonly = 1,
    default_visibility = ["//:soy_internal"],
)

java_proto_library(
    name = "test_protos_java_proto",
    deps = [":test_protos"],
)

java_proto_library(
    name = "test_collision_protos_java_proto",
    deps = [":test_collision_protos"],
)

proto_library(
    name = "test_protos",
    srcs = glob(
        ["*.proto"],
        exclude = ["collision.proto"],
    ),
)

proto_library(
    name = "test_collision_protos",
    srcs = ["collision.proto"],
)
